# py-uv-workspace

./: 100_python_자료형.ipynb  100_python_자료형_문제.ipynb  101_python_제어문_문제.ipynb  103_python_내장 함수 및 표준라이브러리.ipynb  108_python_정규 표현식.ipynb  Script-1.sql  Script-2.sql  Script-3.sql  Script.sql  app.py  app2.py  app3.py  app4.py  data01_데이터 수집.ipynb  data01_데이터 수집_hollys.ipynb  data02_데이터수집_hollys.ipynb  dummy.py  holly_store_page.csv  main.py  py01-basic.ipynb  py02-statement.ipynb  py03_function.ipynb  py05-class.ipynb  py06-execption.ipynb  py07-fileio.ipynb  py08-streamlit.ipynb  pyproject.toml
source/: recode.csv  sample.txt  students.json
source/source/: gosu.py
