[project]
name = "py-uv-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pytz>=2026.2",
    "seaborn>=0.13.2",
    "selenium>=4.46.0",
    "streamlit>=1.59.2",
    "webdriver-manager>=4.1.2",
]
